--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-pystray==0.19.3
-Pillow==8.4.0
-playsound==1.2.2
-gTTS==2.2.4
+gtts==2.2.4
+Pillow==9.1.1
+playsound==1.3.0
 pynput==1.7.6
+pystray==0.19.3
+python_dateutil==2.8.2
+python_weather==0.3.7
+pywin32==304
+requests==2.27.1
+scikit_learn==1.1.1
+SpeechRecognition==3.8.1
 wikipedia==1.4.0
-scikit-learn==1.0.1
-python-dateutil~=2.8.2
-requests~=2.25.1
